--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Website Title</h1>
+        <h1>help me</h1>
     </header>
 
     <nav>
@@ -21,13 +21,13 @@
 
     <main>
         <section>
-            <h2>Welcome to our website!</h2>
-            <p>This is a simple and clean website template.</p>
+            <h2>help me</h2>
+            <p>help me</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Website. All rights reserved.</p>
+        <p>&copy; help me.</p>
     </footer>
 </body>
 </html>
