--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="helpme.html">Home</a></li>
+            <li><a href="helpme.html">About</a></li>
+            <li><a href="helpme.html">Contact</a></li>
         </ul>
     </nav>
 
