--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="helpme.html">Home</a></li>
             <li><a href="helpme.html">About</a></li>
             <li><a href="helpme.html">Contact</a></li>
+            <img src="will.png" alt="will" width="500" height="333">
         </ul>
     </nav>
 
