--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <li><a href="helpme.html">Home</a></li>
             <li><a href="helpme.html">About</a></li>
             <li><a href="helpme.html">Contact</a></li>
-            <img src="will.png" alt="will" width="500" height="333">
+            <img src="will.png" alt="will" width="1000" height="1000">
         </ul>
     </nav>
 
     <main>
         <section>
-            <h2>help me</h2>
-            <p>help me</p>
+            <h2>whats poppin</h2>
+            <p>yo yo yo </p>
         </section>
     </main>
 
