--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style="background-color:DodgerBlue;">help me</h1>
+        <h1 style="background-color:DodgerBlue;">idk what im doing </h1>
     </header>
 
     <nav>
