--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     </header>
 
     <nav>
+        <details>
+            <summary>this is so cool</summary>
+            <p>but this is way cooler</p>
+        </details>
         <ul>
             <li><a href="helpme.html">Home</a></li>
             <li><a href="helpme.html">About</a></li>
