--- a/index.html
+++ b/index.html
@@ -4,35 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>What up yo</title>
+    <title>Test Site for Projects</title>
 </head>
 <body>
-    <header>
-        <h1 style="background-color:DodgerBlue;">idk what im doing </h1>
-    </header>
-
+    <h1>Test Site</h1>
     <nav>
-        <details>
-            <summary>this is so cool</summary>
-            <p>but this is way cooler</p>
-        </details>
-        <ul>
-            <li><a href="helpme.html">Home</a></li>
-            <li><a href="helpme.html">About</a></li>
-            <li><a href="helpme.html">Contact</a></li>
-            <img src="will.png" alt="will" width="1000" height="1000">
-        </ul>
+        <a href="/more.html">more</a>
     </nav>
-
-    <main>
-        <section>
-            <h2>whats poppin</h2>
-            <p>yo yo yo </p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; help me.</p>
-    </footer>
+    <h2>About</h2>
+    <p>I need to figure out how to use html</p>
+    
+    <h3>Random facts</h3>
+    <p>One time i ate a bug<br>
+    
+    <h3>Links</h3>
+    <li>linkedin.com/in/will-coyne/</li>
 </body>
 </html>
